--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,9 @@ homepage: https://github.com/lucas979797
 environment:
   sdk: '>=2.12.0 <3.0.0'
 
+dependencies:
+  typed_data: ^1.3.0
+
 dev_dependencies:
   pedantic: ^1.9.0
   test: ^1.14.4
